# solarica

./: .env.example  .gitignore  CLAUDE.md  DEPLOY_NO_DOCKER.md  DEPLOY_SERVER.md  README.md  README_UPDATE.md  ROADMAP.md  SPEC.md  deploy-all-to-server.ps1  deploy-backend-to-server.ps1  deploy-to-server.ps1  docker-compose.yml  run_all.ps1  run_all.sh  run_backend.bat  run_backend.sh  run_frontend.bat  run_frontend.sh
Solarica/: .dockerignore  README.md  REFACTOR_NOTES.md  deploy-credentials.local.ps1.example  deploy-solarica-backend.ps1  deploy-solarica-frontend.ps1  deploy-solarica.ps1  docker-compose.yml  ivcare.db  pattern_output.txt  pattern_results.txt  pdf_raw_output.txt  solar_string_list.txt  solar_string_list_clean.txt  solar_string_list_formatted.txt
backend/: cli.py  requirements.txt
database/: solarica_schema.sql
parser_engine/: README.md  pyproject.toml  requirements.txt
parser_engine/backend/app/: main.py
parser_engine/docs/: API_CONTRACT.md  DETAILED_DOCUMENTATION.md  PIPELINE.md  VALIDATION_RULES.md
parser_engine/examples/: run_example.sh  run_hamadiya.sh  run_qunitra.sh
parser_engine/schemas/: run_request.schema.json  step_request.schema.json
parser_engine/src/map_parser_v7/: __init__.py  cli.py
parser_engine/src/map_parser_v7/api/: server.py
parser_engine/src/map_parser_v7/core/: __init__.py  engine.py  extractors.py  progress.py
parser_engine/src/map_parser_v7/schemas/: models.py
parser_engine/src/map_parser_v7/steps/: __init__.py  registry.py
parser_engine/src/map_parser_v7/utils/: __init__.py  io.py  text_patterns.py
(+616 files in other folders)
