[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "map-parser-v7"
version = "0.1.0"
description = "Solarica design map parser; Python package lives under src/map_parser_v7"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
